--- a/wordpress/dev/plugins/custom-stuff/assets/scss/_admin.scss
+++ b/wordpress/dev/plugins/custom-stuff/assets/scss/_admin.scss
@@ -8,7 +8,7 @@
 		margin: 0 -10px;
 		& > div {
 			@include inline-block(top);
-			@include box-sizing;
+			box-sizing: border-box;	
 			padding: 0 10px;
 			&.radio, &.check {
 				label, input[type='radio'], input[type='checkbox'] {
