Update readme files, add note to stylesheet

--- a/wordpress/dev/themes/ambase/assets/scss/style.scss
+++ b/wordpress/dev/themes/ambase/assets/scss/style.scss
@@ -9,6 +9,8 @@
 	License URI: https://www.gnu.org/licenses/gpl.html
 	Tags: base wordpress theme
 	Text Domain: ambase
+
+	Temporary theme screenshot from placekitten.com.
 */
 
 // Helpers
