--- a/wordpress/dev/plugins/custom-stuff/assets/scss/_admin.scss
+++ b/wordpress/dev/plugins/custom-stuff/assets/scss/_admin.scss
@@ -1,7 +1,7 @@
 /* Post, Add Term, Edit Term, and Option styles for meta fields
 ========================================================================== */
 
-.xyz-post-meta, .xyz-term-meta, .xyz-options {
+.cstmstff-post-meta, .cstmstff-term-meta, .cstmstff-options {
 	textarea {
 		height: 200px;
 	}
@@ -182,7 +182,7 @@
 /* Post styles for meta fields
 ========================================================================== */
 
-.xyz-post-meta {
+.cstmstff-post-meta {
 	.row {
 		margin: 0 0 20px 0;
 		&:last-child {
@@ -238,8 +238,8 @@
 /* Add Term, Edit Term, and Option styles for meta fields
 ========================================================================== */
 
-.xyz-term-meta, .xyz-options {
-	#wp-xyz-editor-wrap {
+.cstmstff-term-meta, .cstmstff-options {
+	#wp-cstmstff-editor-wrap {
 		width: 95%;
 	}
 }
@@ -247,9 +247,9 @@
 /* Edit Term and Option styles for meta fields
 ========================================================================== */
 
-.xyz-term-meta td, .xyz-options {
+.cstmstff-term-meta td, .cstmstff-options {
 	@include respond(782) {
-		#wp-xyz-editor-wrap, input[type='url'] {
+		#wp-cstmstff-editor-wrap, input[type='url'] {
 			width: 100%;
 		}
 	}
@@ -258,14 +258,14 @@
 /* Add Term and Edit Term for meta fields
 ========================================================================== */
 
-.xyz-term-meta .options .text input {
+.cstmstff-term-meta .options .text input {
 	width: 100%;
 }
 
 /* Add Term styles for meta fields
 ========================================================================== */
 
-div.xyz-term-meta {
+div.cstmstff-term-meta {
 	.options {
 		margin: 2px -10px; 
 		.text {
@@ -292,7 +292,7 @@ div.xyz-term-meta {
 /* Edit Term for meta fields
 ========================================================================== */
 
-.xyz-term-meta td .options .text {
+.cstmstff-term-meta td .options .text {
 	width: 23.75%;
 	@include respond(1100) {
 		width: 47.5%;
