Fix commenting on theme files

--- a/wordpress/dev/themes/ambase/assets/scss/_normalize.scss
+++ b/wordpress/dev/themes/ambase/assets/scss/_normalize.scss
@@ -1,12 +1,12 @@
-// Modified normalize.css (from v3.0.3)
-// =======================================================================
-// MIT License | github.com/necolas/normalize.css
+/* Modified normalize.css (from v3.0.3)
+   MIT License | github.com/necolas/normalize.css
 
-// Edits:
-// 1. Removed a lot of extra comments
-// 2. Brought more selectors on the same lines
-// 3. Removed rules for h1 (this will be overriden most likely)
-// 4. Removed rules for fieldset (will style if needed)
+   Edits:
+   1. Removed a lot of extra comments
+   2. Brought more selectors on the same lines
+   3. Removed rules for h1 (this will be overriden most likely)
+   4. Removed rules for fieldset (will style if needed)
+========================================================================== */ 
 
 /* General
 ========================================================================== */
