--- a/wordpress/dev/themes/ambase/assets/scss/style.scss
+++ b/wordpress/dev/themes/ambase/assets/scss/style.scss
@@ -4,10 +4,10 @@
 	Author: Adria Murphy
 	Author URI: http://neverend.org/adria
 	Description: A base theme setup for WordPress.
-	Version: 2.0
+	Version: 3.0
 	License: GNU General Public License
 	License URI: https://www.gnu.org/licenses/gpl.html
-	Tags: base wordpress theme
+	Tags: custom base wordpress theme
 	Text Domain: ambase
 
 	Temporary theme screenshot from placekitten.com.
