--- a/wordpress/dev/themes/ambase/assets/scss/style.scss
+++ b/wordpress/dev/themes/ambase/assets/scss/style.scss
@@ -20,8 +20,9 @@
 // Vendor
 @import 'normalize';
 
-// Base styles
-@import 'reset';
-
 // WordPress specific classes
 @import 'wordpress';
+
+// Everything else
+@import 'base';
+@import 'typography';
