--- a/base/dev/assets/scss/_mixins.scss
+++ b/base/dev/assets/scss/_mixins.scss
@@ -17,7 +17,7 @@
 }
 
 // Quick reset
-@mixin reset() {
+@mixin reset {
 	margin: 0;
 	padding: 0;
 }
@@ -33,4 +33,12 @@
 @mixin sizing($width, $height) {
 	width: $width;
 	height: $height;
+}
+
+// Transition
+@mixin transition($prop, $duration, $function) {
+	-webkit-transition: $prop $duration $function;	
+	-moz-transition: $prop $duration $function;	
+	-o-transition: $prop $duration $function;	
+	transition: $prop $duration $function;
 }
