--- a/wordpress/dev/themes/ambase/assets/scss/_normalize.scss
+++ b/wordpress/dev/themes/ambase/assets/scss/_normalize.scss
@@ -27,8 +27,7 @@ nav, section, summary {
 }
 
 audio, canvas, progress, video {
-	display: inline-block;
-	vertical-align: baseline;
+	@include inline-block(baseline);
 }
 
 audio:not([controls]) {
