Add friends not food template

--- a/codes/dev/assets/scss/_variables.scss
+++ b/codes/dev/assets/scss/_variables.scss
@@ -3,6 +3,8 @@
 
 $color-01: #ffffff; // white
 $color-02: #000000; // black
+$color-03: #333333; // blackish
+$color-04: #393e86; // blue
 
 /* Fonts
 ========================================================================== */
