Finish making template responsive

--- a/codes/dev/assets/scss/_variables.scss
+++ b/codes/dev/assets/scss/_variables.scss
@@ -5,6 +5,7 @@ $color-01: #ffffff; // white
 $color-02: #000000; // black
 $color-03: #333333; // blackish
 $color-04: #393e86; // blue
+$color-05: #17476d; // dark blue
 
 /* Fonts
 ========================================================================== */
@@ -13,6 +14,6 @@ $base-font-size: 16;
 $global-font-size: 14px;
 $serif-fb: garamond, times new roman, serif;
 $sans-serif-fb: arial, sans-serif;
-$font-01: 'Fira Sans', $sans-serif-fb;
+$font-01: 'Arial Narrow', $sans-serif-fb;
 $font-02: 'Spectral', $serif-fb;
 $font-03: 'Selima', $sans-serif-fb;
