Finish converting tab script to javascript

--- a/codes/dev/assets/scss/_variables.scss
+++ b/codes/dev/assets/scss/_variables.scss
@@ -6,6 +6,8 @@ $color-02: #000000; // black
 $color-03: #333333; // blackish
 $color-04: #393e86; // blue
 $color-05: #17476d; // dark blue
+$color-06: #999999; // gray
+$color-07: #222222; // blackish
 
 /* Fonts
 ========================================================================== */
