--- a/codes/dev/assets/scss/fnf.scss
+++ b/codes/dev/assets/scss/fnf.scss
@@ -2,7 +2,7 @@
 @import 'variables';
 @import 'mixins';
 
-/* Template by Memoria / displaycoffee.
+/* Hello Content! by Memoria / displaycoffee.
 Last updated 07.20.18.
 Please do not remove credits! */
 
