--- a/codes/dev/assets/scss/hc.scss
+++ b/codes/dev/assets/scss/hc.scss
@@ -22,7 +22,7 @@
 		padding: 0;
 		li {
 			float: left;
-			width: 20%; /* Width = 100 / Number of tabs )*/
+			width: 20%; /* Width = 100 / Number of tabs */
 			padding: 0 2.5px;
 			span {
 				display: block;
