--- a/wordpress/_dev/plugins/custom-stuff/assets/sass/imports/_colors.scss
+++ b/wordpress/_dev/plugins/custom-stuff/assets/sass/imports/_colors.scss
@@ -2,6 +2,6 @@
 // ============================================== //
 
 $color-00: #23282d;
-$color-01: #000000;
+$color-01: #7e8993;
 $color-02: #000000;
 $color-03: #000000;
