--- a/wordpress/_dev/plugins/custom-stuff/assets/sass/imports/_form-fields.scss
+++ b/wordpress/_dev/plugins/custom-stuff/assets/sass/imports/_form-fields.scss
@@ -1,25 +1,69 @@
 /* Form fields
 ============================================== */
 
-.#{$prefix}-form-field {
-	.form-field-value {
-		input[type='text'], input[type='url'], textarea, select {
-			width: 100%;
-			max-width: none;
-		}
-		textarea {
-			min-height: 300px;
+body[class*='#{$prefix}'] .form-field {
+	&, * {
+		box-sizing: border-box;
+	}
+	input[type='text'], input[type='url'], textarea, select, .wp-picker-container .wp-color-result {
+		width: 100%;
+		max-width: none;
+	}
+	textarea {
+		min-height: 300px;
+	}
+	input[type='text'].date-picker, .date-picker, .wp-picker-container {
+		width: 200px;
+	}
+	.wp-picker-container {
+		.wp-color-result {
+			padding-left: 60px;
+			border-color: $color-01;
 		}
 	}
-	.form-field-description {
+	.wp-picker-container .wp-color-result, .form-field-description, .description {
 		margin: 10px 0 0 0;
+	}
+}
+
+.#{$prefix}-form-field {
+	.form-field-row {
+		@include flex-flow(row wrap);
+		margin: 0 -10px;
+		.form-field-column {
+			@include flex;
+			padding: 0 10px;
+		}
+		.form-field-label label {
+			color: $color-00;
+			font-weight: 600;
+		}
+	}
+	&.form-field-text .form-field-row {
+		.form-field-column {
+			width: 25%;
+		}
+		.form-field-label label {
+			margin: 0 0 4px 0;
+			display: block;
+		}
+	}
+	&.form-field-checkbox .form-field-row {
+		.form-field-column {
+			.form-field-label, .form-field-value {
+				@include inline-block(middle);
+			}
+			.form-field-label {
+				margin: 0 10px 0 0;
+			}
+		}
 	}
 }
 
 /* Form fields - Posts
 ============================================== */
 
-#poststuff [id*='cstmstff-post-meta'] {
+#poststuff [id*='#{$prefix}-post'] {
 	h2.hndle {
 		margin: 0 0 30px 0;
 	}
@@ -41,4 +85,11 @@
 			flex: 1 1 0%;
 		}
 	}
+}
+
+/* Form fields - Edit Categories
+============================================== */
+
+body[class*='taxonomy-#{$prefix}'] #edittag {
+	max-width: none;
 }
