--- a/wordpress/_dev/plugins/custom-stuff/assets/sass/imports/_variables.scss
+++ b/wordpress/_dev/plugins/custom-stuff/assets/sass/imports/_variables.scss
@@ -2,6 +2,9 @@
 // ============================================== //
 
 $prefix: 'cstmstff';
+$ff: '.form-field';
+$wp: '.wp-picker';
+$dp: '.date-picker';
 
 // Paths
 // ============================================== //
