Work on form field design

--- a/wordpress/_dev/plugins/custom-stuff/assets/sass/compressed/style.scss
+++ b/wordpress/_dev/plugins/custom-stuff/assets/sass/compressed/style.scss
@@ -8,23 +8,7 @@
 @import '../imports/variables';
 @import '../imports/colors';
 @import '../imports/mixins';
-//
-// // Vendor
-// @import '../imports/normalize';
-//
-// // Everything else
-// @import '../imports/base';
-// @import '../imports/typography';
-// @import '../imports/icons-fa';
-// @import '../imports/icons-rpg';
+
+// Everything else
 @import '../imports/form-fields';
-// @import '../imports/layout';
-// @import '../imports/profile';
-// @import '../imports/viewlisting';
-// @import '../imports/viewtopic';
-// @import '../imports/posting';
-// @import '../imports/other-sections';
-// @import '../imports/cp';
-// @import '../imports/header';
-// @import '../imports/footer';
-// @import '../imports/responsive';
+@import '../imports/responsive';
