--- a/wordpress/_dev/plugins/custom-stuff/assets/sass/imports/_variables.scss
+++ b/wordpress/_dev/plugins/custom-stuff/assets/sass/imports/_variables.scss
@@ -4,13 +4,8 @@
 $prefix: 'cstmstff';
 $ff: '.form-field';
 $wp: '.wp-picker';
-$dp: '.date-picker';
-
-// Paths
-// ============================================== //
 
 // Fonts
 // ============================================== //
 
-// Other
-// ============================================== //
+$base-font-size: 13px;
